--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
         "baseUrl": ".",
         "paths": {
           "@components/*": ["src/components/*"],
-          "@layouts/*": ["src/layouts/*"]
+          "@layouts/*": ["src/layouts/*"],
+          "@pages/*": ["src/pages/*"],
+          "@scripts/*": ["src/scripts/*"],
+          "@styles/*": ["src/styles/*"],
+          "@assets/*": ["src/assets/*"],
         }
     }
 }
