--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "astro": "^2.1.2",
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.3.2",
     "astro-flamethrower": "^0.1.2",
-    "flamethrower-router": "^0.0.0-meme.12"
+    "flamethrower-router": "^0.0.0-meme.12",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "prettier": "^2.8.8",
+    "prettier-plugin-astro": "^0.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "sass": "^1.58.3",
     "typescript": "^4.9.5"
   }
